changes to the header

--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
                 a front-end software engineer with a passion for building beautiful interfaces and
                 experiences.
             </h2>
-            <h3 class="intro-contact">
-                <span class="text- font-medium">Get in touch </span>
-                <span class="emoji point-right"></span>
-                <span>
-                    <a href="mailto:edmiller.me@gmail.com"
-                        class="highlight-link text-md border-b-2 border-green-500">edmiller.me@gmail.com</a>
-                </span>
-            </h3>
+            <button class="main-button"><a href="mailto:edmiller.me@gmail.com"
+                    class="text-xl font-bold tracking-wider">Get
+                    in
+                    Touch</a></button>
         </div>
     </header>
     <section id="background" data-aos="fade-right" data-aos-duration="1500">
+        <div class="header-border"></div>
         <div class="mx-10 xl:flex xl:mx-64 xl:mb-48">
             <div class="pb-6">
                 <span class="text-green-500 font-bold text-base uppercase tracking-widest">Background</span>
