--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="header-border"></div>
         <div class="mx-10 xl:flex xl:mx-64 xl:mb-48">
             <div class="pb-6">
-                <span class="text-green-500 font-bold text-base uppercase tracking-widest">Background</span>
+                <span class="title font-bold text-base uppercase tracking-widest">Background</span>
             </div>
             <div class="ml-6 xl:ml-16">
                 <p class="pb-8">I'm currently an Inventory Coordinator at <a href="https://vetlife.co.nz/"
@@ -73,7 +73,7 @@
     <section id="skills" data-aos="fade-right" data-aos-duration="1500" data-aos-offset="10">
         <div class="mx-10 mb-10 xl:flex xl:mx-64 xl:mb-48">
             <div class="pb-6">
-                <span class="text-green-500 font-bold text-base uppercase tracking-widest">Skills</span>
+                <span class="title font-bold text-base uppercase tracking-widest">Skills</span>
             </div>
             <div class="ml-6 xl:ml-32">
                 <span class="font-bold uppercase tracking-wide">Languages</span>
@@ -101,10 +101,10 @@
                 </ul>
             </div>
     </section>
-    <section class="other projects">
+    <section id="projects">
         <div class="mx-10 mb-10 xl:flex xl:mx-64 xl:mb-48">
             <div class="pb-6" data-aos="fade-right" data-aos-duration="1500">
-                <span class="text-green-500 font-bold text-base uppercase tracking-widest">
+                <span class="title font-bold text-base uppercase tracking-widest">
                     Projects
                 </span>
             </div>
@@ -113,7 +113,7 @@
                     <div class="xl:ml-16">
                         <span class="font-bold">Felinder</span>
                         <a href="https://github.com/edmiller1/Felinder" class="ml-3"><i
-                                class="arrow fas fa-arrow-right w-32 fill-current text-green-500"></i></a>
+                                class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
                     <p class="xl:ml-16 pt-6">An application similar to Tinder that allows users to unmatch, match or
                         super-like
@@ -131,7 +131,7 @@
                     <div class="xl:ml-16">
                         <span class="font-bold">VueTODO</span>
                         <a href="https://github.com/edmiller1/vueTODO" class="ml-3"><i
-                                class="arrow fas fa-arrow-right w-32 fill-current text-green-500"></i></a>
+                                class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
                     <p class="xl:ml-16 pt-6">A desktop TODO app built with VueJS that allows users to create, read,
                         update
@@ -150,7 +150,7 @@
                     <div class="xl:ml-16">
                         <span class="font-bold">Trello Clone</span>
                         <a href="https://github.com/edmiller1/Trello-Clone" class="ml-3"><i
-                                class="arrow fas fa-arrow-right w-32 fill-current text-green-500"></i></a>
+                                class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
                     <p class="xl:ml-16 pt-6">A desktop web app that mimics
                         the basic capabilities of Trello and stores all created tasks using local storage.
@@ -166,7 +166,7 @@
                     <div class="xl:ml-16">
                         <span class="font-bold">Github Resume</span>
                         <a href="https://github.com/edmiller1/edmiller1.github.io" class="ml-3"><i
-                                class="arrow fas fa-arrow-right w-32 fill-current text-green-500"></i></a>
+                                class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
                     <p class="xl:ml-16 pt-6">An online resume hosted on Github Pages that displays key things about
                         myself
@@ -188,11 +188,11 @@
             2020
         </div>
         <div class="flex py-10 xl:flex-none xl:px-24 xl:py-10">
-            <span><a class="font-bold text-green-500 tracking-wider uppercase text-base mx-6 cursor-pointer"
+            <span><a class="title font-bold tracking-wider uppercase text-base mx-6 cursor-pointer"
                     href="mailto:edmiller.me@gmail.com" target="_blank">Email</a></span>
-            <span><a class="font-bold text-green-500 tracking-wider uppercase text-base mx-6 cursor-pointer"
+            <span><a class="title font-bold tracking-wider uppercase text-base mx-6 cursor-pointer"
                     href="https://www.instagram.com/_edwardmiller_/" target="_blank">Instagram</a></span>
-            <span><a class="font-bold text-green-500 tracking-wider uppercase text-base mx-6 cursor-pointer"
+            <span><a class="title font-bold tracking-wider uppercase text-base mx-6 cursor-pointer"
                     href="https://github.com/edmiller1" target="_blank">github</a></span>
         </div>
         <button onclick="goToTop()" id="toTopButton" class="emoji point-up"></button>
