Colour changes to multiple sections

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
                     Touch</a></button>
         </div>
     </header>
-    <section id="background" data-aos="fade-right" data-aos-duration="1500">
-        <div class="header-border"></div>
-        <div class="mx-10 xl:flex xl:mx-64 xl:mb-48">
+    <section id="background" class="pt-32">
+        <div class="mx-10 xl:flex xl:mx-64 xl:mb-48" data-aos="fade-right" data-aos-duration="1500">
             <div class="pb-6">
-                <span class="title font-bold text-base uppercase tracking-widest">Background</span>
+                <span class="title font-bold uppercase tracking-widest text-3xl">Background</span>
             </div>
             <div class="ml-6 xl:ml-16">
                 <p class="pb-8">I'm currently an Inventory Coordinator at <a href="https://vetlife.co.nz/"
@@ -61,7 +60,7 @@
                     also
                     providing engaging and elegant user experiences.</p>
 
-                <p class="pb-8"><span class="font-bold">When i'm not in front of a computer screen,</span>
+                <p><span class="font-bold">When i'm not in front of a computer screen,</span>
                     you might
                     find me playing video games with friends, reading a good book, playing my guitar or
                     hanging out with
@@ -70,10 +69,11 @@
             </div>
         </div>
     </section>
-    <section id="skills" data-aos="fade-right" data-aos-duration="1500" data-aos-offset="10">
-        <div class="mx-10 mb-10 xl:flex xl:mx-64 xl:mb-48">
+    <section id="skills" class="pt-32 pb-12">
+        <div class="px-10 xl:flex xl:mx-64 xl:mb-48" data-aos="fade-right" data-aos-duration="1500"
+            data-aos-offset="10">
             <div class="pb-6">
-                <span class="title font-bold text-base uppercase tracking-widest">Skills</span>
+                <span class="title font-bold text-3xl uppercase tracking-widest">Skills</span>
             </div>
             <div class="ml-6 xl:ml-32">
                 <span class="font-bold uppercase tracking-wide">Languages</span>
@@ -101,10 +101,10 @@
                 </ul>
             </div>
     </section>
-    <section id="projects">
-        <div class="mx-10 mb-10 xl:flex xl:mx-64 xl:mb-48">
+    <section id="projects" class="pt-10 pb-20">
+        <div class="mx-10 xl:flex xl:mx-64 xl:mb-48">
             <div class="pb-6" data-aos="fade-right" data-aos-duration="1500">
-                <span class="title font-bold text-base uppercase tracking-widest">
+                <span class="title font-bold text-3xl uppercase tracking-widest">
                     Projects
                 </span>
             </div>
@@ -168,7 +168,8 @@
                         <a href="https://github.com/edmiller1/edmiller1.github.io" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6">An online resume hosted on Github Pages that displays key things about
+                    <p class="xl:ml-16 pt-6 text-gray-300">An online resume hosted on Github Pages that displays key
+                        things about
                         myself
                         including projects,
                         education and skills.
@@ -183,7 +184,7 @@
             </div>
         </div>
     </section>
-    <footer class="mt-32 xl:flex xl:items-center xl:justify-between">
+    <footer class="xl:flex xl:items-center xl:justify-between">
         <div class="font-bold text-lg px-12 xl:px-10 xl:py-10">Made by Edward Miller <span class="emoji happy"></span>
             2020
         </div>
