Added Profile image

--- a/index.html
+++ b/index.html
@@ -25,19 +25,25 @@
             </label>
             <i class="fas fa-moon fa-lg px-3"></i>
         </div>
-        <div id="intro" class="px-10 pb-16 pt-24 xl:py-48 xl:px-24" data-aos="fade-right" data-aos-duration="1500">
-            <h1 class="intro-hi text-3xl xl:text-4xl font-light">Hi there!
-                <span class="emoji wave-hand"></span>
-            </h1>
-            <h2 class="intro-blurb py-8 text-xl xl:text-4xl font-medium">I'm <span class="font-bold">Edward
-                    Miller,</span>
-                a front-end software engineer with a passion for building beautiful interfaces and
-                experiences.
-            </h2>
-            <button class="main-button"><a href="mailto:edmiller.me@gmail.com"
-                    class="text-xl font-bold tracking-wider">Get
-                    in
-                    Touch</a></button>
+        <div id="intro" class="flex px-10 pb-16 pt-24 xl:py-48 xl:px-24" data-aos="fade-right" data-aos-duration="1500">
+            <div>
+                <h1 class="intro-hi text-3xl xl:text-4xl font-light">Hi there!
+                    <span class="emoji wave-hand"></span>
+                </h1>
+                <h2 class="intro-blurb py-8 text-xl xl:text-4xl font-medium">I'm <span class="font-bold">Edward
+                        Miller,</span>
+                    a front-end software engineer with a passion for building beautiful interfaces and
+                    experiences.
+                </h2>
+                <button class="main-button"><a href="mailto:edmiller.me@gmail.com"
+                        class="text-xl font-bold tracking-wider">Get
+                        in
+                        Touch</a></button>
+            </div>
+            <div class="ml-20">
+                <img src="./assets/profile.jpg" class="ml-20 rounded-lg border-8 border-gray-100"
+                    style="width: 450px;" />
+            </div>
         </div>
     </header>
     <section id="background" class="pt-32">
@@ -115,7 +121,8 @@
                         <a href="https://github.com/edmiller1/Felinder" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6">An application similar to Tinder that allows users to unmatch, match or
+                    <p class="xl:ml-16 pt-6">An application similar to Tinder that allows users to unmatch,
+                        match or
                         super-like
                         cats based on picture, distance and age.
                     </p>
@@ -133,7 +140,8 @@
                         <a href="https://github.com/edmiller1/vueTODO" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6">A desktop TODO app built with VueJS that allows users to create, read,
+                    <p class="xl:ml-16 pt-6">A desktop TODO app built with VueJS that allows users to
+                        create, read,
                         update
                         and
                         delete TODO's as well as mark them as important.
@@ -168,7 +176,8 @@
                         <a href="https://github.com/edmiller1/edmiller1.github.io" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6 text-gray-300">An online resume hosted on Github Pages that displays key
+                    <p class="xl:ml-16 pt-6 text-gray-300">An online resume hosted on Github Pages that
+                        displays key
                         things about
                         myself
                         including projects,
