changed text colour

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <a href="https://github.com/edmiller1/edmiller1.github.io" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6 text-gray-300">An online resume hosted on Github Pages that
+                    <p class="xl:ml-16 pt-6">An online resume hosted on Github Pages that
                         displays key
                         things about
                         myself
