--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </label>
             <i class="fas fa-moon fa-lg px-3"></i>
         </div>
-        <div id="intro" class="flex px-10 pb-16 pt-24 xl:py-48 xl:px-24" data-aos="fade-right" data-aos-duration="1500">
+        <div id="intro" class="xl:flex px-10 pb-16 pt-24 xl:py-48 xl:px-24" data-aos="fade-right"
+            data-aos-duration="1500">
             <div>
                 <h1 class="intro-hi text-3xl xl:text-4xl font-light">Hi there!
                     <span class="emoji wave-hand"></span>
@@ -40,18 +41,21 @@
                         in
                         Touch</a></button>
             </div>
-            <div class="ml-20">
-                <img src="./assets/profile.jpg" class="ml-20 rounded-lg border-8 border-gray-100"
+            <div class="hidden xl:block xl:ml-20">
+                <img src="./assets/profile.jpg" class="xl:ml-20 rounded-lg border-8 border-gray-100"
                     style="width: 450px;" />
             </div>
         </div>
     </header>
-    <section id="background" class="pt-32">
+    <section id="background" class="pt-5 xl:pt-32">
+        <div class="mx-10 mb-20 xl:hidden" data-aos="fade-up" data-aos-duration="1500">
+            <img src="./assets/profile.jpg" class="profile-image xl:ml-20 rounded-lg" style="width: 450px;" />
+        </div>
         <div class="mx-10 xl:flex xl:mx-64 xl:mb-48" data-aos="fade-right" data-aos-duration="1500">
             <div class="pb-6">
                 <span class="title font-bold uppercase tracking-widest text-3xl">Background</span>
             </div>
-            <div class="ml-6 xl:ml-16">
+            <div class="mb-10 ml-6 xl:ml-16">
                 <p class="pb-8">I'm currently an Inventory Coordinator at <a href="https://vetlife.co.nz/"
                         target="_blank" class="link font-bold">Vetlife</a> in
                     Ashburton after recently graduating from <a href="https://www.sit.ac.nz/" target="_blank"
@@ -194,7 +198,8 @@
         </div>
     </section>
     <footer class="xl:flex xl:items-center xl:justify-between">
-        <div class="font-bold text-lg px-12 xl:px-10 xl:py-10">Made by Edward Miller <span class="emoji happy"></span>
+        <div class="font-bold text-lg px-12 pt-5 xl:px-10 xl:py-10">Made by Edward Miller <span
+                class="emoji happy"></span>
             2020
         </div>
         <div class="flex py-10 xl:flex-none xl:px-24 xl:py-10">
