--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <section id="background" class="pt-5 xl:pt-32">
         <div class="mx-10 mb-20 xl:hidden" data-aos="fade-up" data-aos-duration="1500">
-            <img src="./assets/profile.jpg" class="profile-image xl:ml-20 rounded-lg" style="width: 450px;" />
+            <img src="./assets/profile.jpeg" class="profile-image xl:ml-20 rounded-lg" style="width: 450px;" />
         </div>
         <div class="mx-10 xl:flex xl:mx-64 xl:mb-48" data-aos="fade-right" data-aos-duration="1500">
             <div class="pb-6">
