Fixed profile image display

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         Touch</a></button>
             </div>
             <div class="hidden xl:block xl:ml-20">
-                <img src="./assets/profile.jpg" class="xl:ml-20 rounded-lg border-8 border-gray-100"
-                    style="width: 450px;" />
+                <img src="./assets/profile.jpeg" class="xl:ml-20 xl:-mt-20 rounded-lg border-8 border-gray-100"
+                    style="width: 450px;"/>
             </div>
         </div>
     </header>
@@ -120,7 +120,7 @@
             </div>
             <div class="flex-col xl:ml-8">
                 <div data-aos="fade-right" data-aos-duration="1500">
-                    <div class="xl:ml-16">
+                    <div class="xl:ml-16 xl:mt-2">
                         <span class="font-bold">Felinder</span>
                         <a href="https://github.com/edmiller1/Felinder" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
