Added Wave project and React

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
                 <span class="font-bold uppercase tracking-wide">Frameworks</span>
                 <ul class="text pt-2">
                     <li class="pb-1">VueJS</li>
+                    <li class="pb-1">React</li>
                     <li class="pb-1">Bootstrap</li>
                     <li class="pb-1">TailwindCSS</li>
-                    <li class="pb-1">ASP.NET Core</li>
+                    <li class="pb-1">Sass</li>
                 </ul>
             </div>
             <div class="ml-6">
@@ -192,6 +193,20 @@
                         <span class="tag">CSS3</span>
                         <span class="tag">TailwindCSS</span>
                         <span class="tag">Github</span>
+                    </div>
+                </div>
+                <div data-aos="fade-right" data-aos-duration="1500">
+                    <div class="xl:ml-16 xl:mt-10">
+                        <span class="font-bold">Wave</span>
+                        <a href="https://wave-react-app.netlify.app/" class="ml-3"><i
+                                class="arrow fas fa-arrow-right w-32 title"></i></a>
+                    </div>
+                    <p class="xl:ml-16 pt-6">
+                        A music player application created with React that allows users to play, pause and skip songs.
+                    </p>
+                    <div class="flex xl:ml-16 pt-6">
+                        <span class="tag">React</span>
+                        <span class="tag">Sass</span>   
                     </div>
                 </div>
             </div>
