Added new project

--- a/index.html
+++ b/index.html
@@ -161,18 +161,17 @@
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1500">
                     <div class="xl:ml-16">
-                        <span class="font-bold">Trello Clone</span>
-                        <a href="https://github.com/edmiller1/Trello-Clone" class="ml-3"><i
+                        <span class="font-bold">Weekly</span>
+                        <a href="https://github.com/edmiller1/Weekly" class="ml-3"><i
                                 class="arrow fas fa-arrow-right w-32 title"></i></a>
                     </div>
-                    <p class="xl:ml-16 pt-6">A desktop web app that mimics
-                        the basic capabilities of Trello and stores all created tasks using local storage.
+                    <p class="xl:ml-16 pt-6">An app that allows users to plan their week.
                     </p>
                     <div class="flex xl:ml-16 pt-6 pb-12">
-                        <span class="tag">VueJS</span>
+                        <span class="tag">React</span>
                         <span class="tag">TailwindCSS</span>
-                        <span class="tag">Drag and Drop API</span>
-                        <span class="tag">Local Storage</span>
+                        <span class="tag">react-DnD</span>
+                        <span class="tag">Sass</span>
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1500">
