Updated skills and frameworks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </h1>
                 <h2 class="intro-blurb py-8 text-xl xl:text-4xl font-medium">I'm <span class="font-bold">Edward
                         Miller,</span>
-                    a front-end software engineer with a passion for building beautiful interfaces and
+                    a web developer with a passion for building beautiful interfaces and
                     experiences.
                 </h2>
                 <button class="main-button"><a href="mailto:edmiller.me@gmail.com"
@@ -91,6 +91,9 @@
                     <li class="pb-1">Javascript(ES6)</li>
                     <li class="pb-1">HTML5</li>
                     <li class="pb-1">CSS3</li>
+                    <li class="pb-1">Typescript</li>
+                    <li class="pb-1">Node</li>
+                    <li class="pb-1">GraphQL</li>
                 </ul>
             </div>
             <div class="mx-40 xl:mx-32">
@@ -101,6 +104,7 @@
                     <li class="pb-1">Bootstrap</li>
                     <li class="pb-1">TailwindCSS</li>
                     <li class="pb-1">Sass</li>
+                    <li class="pb-1">Express</li>
                 </ul>
             </div>
             <div class="ml-6">
@@ -109,6 +113,7 @@
                     <li class="pb-1">Git & Github</li>
                     <li class="pb-1">NPM</li>
                     <li class="pb-1">Firebase</li>
+                    <li class="pb-1">MongoDB</li>
                 </ul>
             </div>
     </section>
